cb.txt
   Compiling gds v0.1.0 (/home/pat/VSCode/new-organon/gds)
error[E0432]: unresolved import `crate::ml::decision_tree::Features`
 --> gds/src/ml/decision_tree/classifier_trainer.rs:9:68
  |
9 |     DecisionTreeTrainer, DecisionTreeTrainerConfig, FeatureBagger, Features, GiniImpurityData,
  |                                                                    ^^^^^^^^ no `Features` in `ml::decision_tree`
  |
  = help: consider importing one of these items instead:
          crate::ml::Features
          crate::projection::eval::pipeline::train::features_and_labels::Features

warning: unused import: `crate::ml::decision_tree::TreeNode`
 --> gds/src/ml/decision_tree/tests.rs:5:5
  |
5 | use crate::ml::decision_tree::TreeNode;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::ml::decision_tree::predictor::DecisionTreePredictor`
   --> gds/src/ml/decision_tree/tests.rs:114:5
    |
114 | use crate::ml::decision_tree::predictor::DecisionTreePredictor;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::ml::decision_tree::ClassifierImpurityCriterionType`
   --> gds/src/ml/decision_tree/tests.rs:115:5
    |
115 | use crate::ml::decision_tree::ClassifierImpurityCriterionType;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::ml::decision_tree::DecisionTreeTrainerConfig`
   --> gds/src/ml/decision_tree/tests.rs:116:5
    |
116 | use crate::ml::decision_tree::DecisionTreeTrainerConfig;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FeatureBagger`, `ImpurityData`, and `MSEImpurityData`
   --> gds/src/ml/decision_tree/tests.rs:117:32
    |
117 | use crate::ml::decision_tree::{FeatureBagger, ImpurityData, MSEImpurityData};
    |                                ^^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^

warning: unused import: `tests::*`
  --> gds/src/ml/decision_tree/mod.rs:28:9
   |
28 | pub use tests::*;
   |         ^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `gds` (lib) generated 6 warnings
error: could not compile `gds` (lib) due to 1 previous error; 6 warnings emitted
